--- a/benefits_list.html
+++ b/benefits_list.html
@@ -67,7 +67,7 @@
             <!--main navigation-->
             <nav class="b-mainNav" itemscope itemtype='http://schema.org/SiteNavigationElement'>
                 <ul>
-                    <li><a href="#" class="item active">О нас хороших</a></li>
+                    <li><a href="#" class="item">О нас хороших</a></li>
                     <li><a href="#" class="item">Бронируем: легко и быстро</a></li>
                     <li><a href="#" class="item">Трансфер Jet taxi</a></li>
                     <li><a href="#" class="item">Звоните и пишите нам</a></li>
@@ -84,8 +84,38 @@
             </nav>
 
             <!--START page template-->
-            <div class="page page-main">
-            </div><!--END page template-->
+            <ul class="page page-benefits_list">
+                <!--the benefit-->
+                <li class="item item-1">
+                    <h1 class="title">Бронирование бесплатно и быстро</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras id dictum quam. Quisque elit arcu, pellentesque et tincidunt eget, viverra in urna.
+                </li>
+                <!--the benefit-->
+                <li class="item item-2">
+                    <h1 class="title">Только самые выгодные предложения по самым низким ценам</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras id dictum quam. Quisque elit arcu, pellentesque et tincidunt eget, viverra in urna.
+                </li>
+                <!--the benefit-->
+                <li class="item item-3">
+                    <h1 class="title">Любые способы оплаты: наличные, кредитные карты, безналичный расчет для Партнеров и Организаций</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras id dictum quam. Quisque elit arcu, pellentesque et tincidunt eget, viverra in urna.
+                </li>
+                <!--the benefit-->
+                <li class="item item-4">
+                    <h1 class="title">Отмена брони - совершенно бесплатно</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras id dictum quam. Quisque elit arcu, pellentesque et tincidunt eget, viverra in urna.
+                </li>
+                <!--the benefit-->
+                <li class="item item-5">
+                    <h1 class="title">Скидки и специальные предложения с максимальной выгодой для Вас!</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras id dictum quam. Quisque elit arcu, pellentesque et tincidunt eget, viverra in urna.
+                </li>
+                <!--the benefit-->
+                <li class="item item-6">
+                    <h1 class="title">Гарантия возврата денег - в случае отмены или, если Вас не устроит отель</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras id dictum quam. Quisque elit arcu, pellentesque et tincidunt eget, viverra in urna.
+                </li>
+            </ul><!--END page template-->
 
             <!--content footer -->
             <footer class="l-contentFooter">
@@ -124,7 +154,7 @@
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.2.min.js"><\/script>')</script>
-<!--<script src="js/vendor/jquery.columnizer.min.js"></script>-->
+<script src="js/vendor/jquery.columnizer.min.js"></script>
 <script src="js/main.js"></script>
 
 <!-- Asynchronous Google Analytics snippet. Change UA-XXXXX-X to be your site's ID.
