--- a/lucky.html
+++ b/lucky.html
@@ -67,11 +67,11 @@
             <!--main navigation-->
             <nav class="b-mainNav" itemscope itemtype='http://schema.org/SiteNavigationElement'>
                 <ul>
-                    <li><a href="#" class="item active">О нас хороших</a></li>
+                    <li><a href="#" class="item">О нас хороших</a></li>
                     <li><a href="#" class="item">Бронируем: легко и быстро</a></li>
                     <li><a href="#" class="item">Трансфер Jet taxi</a></li>
                     <li><a href="#" class="item">Звоните и пишите нам</a></li>
-                    <li><a href="#" class="item item__lucky">Счастливый пункт меню</a></li>
+                    <li><a href="#" class="item item__lucky active">Счастливый пункт меню</a></li>
                     <li><a href="#" class="item item__skype_status"><span>on</span><img src="images/skype.png" alt=""></a></li>
                 </ul>
             </nav><!--END main navigation-->
@@ -84,7 +84,17 @@
             </nav>
 
             <!--START page template-->
-            <div class="page page-main">
+            <div class="page page-lucky">
+                <div class="image">
+                    <div class="b-coupon"><span class="discount_counter">5</span></div>
+                    <a href="#" class="b-linkPrint">распечатать купон</a>
+                </div>
+                <div class="content">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras nulla lorem, consequat a imperdiet eu, adipiscing sit amet nulla. Mauris nisi lacus, convallis nec auctor vel, laoreet pharetra nisl. Proin mattis erat quam. Vestibulum scelerisque iaculis commodo. Aenean ut mauris mi. Vestibulum pellentesque porta viverra. Quisque erat ligula, auctor quis tincidunt sed, fermentum non nibh. Sed arcu odio, tincidunt vehicula feugiat lobortis, suscipit eget mi. Curabitur in molestie massa.
+                    <p>Maecenas porttitor augue et quam fringilla lacinia. Phasellus vel cursus nisl. Phasellus placerat convallis odio, vitae vehicula erat cursus vel. Sed et purus eget purus consectetur viverra non dapibus mi. Etiam pretium scelerisque nibh a venenatis. Sed in augue quam, ut tempor libero. In ornare est eget felis vestibulum dictum. Maecenas ante quam, semper nec porta id, ornare eu risus.
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras nulla lorem, consequat a imperdiet eu, adipiscing sit amet nulla. Mauris nisi lacus, convallis nec auctor vel, laoreet pharetra nisl. Proin mattis erat quam. Vestibulum scelerisque iaculis commodo. Aenean ut mauris mi. Vestibulum pellentesque porta viverra. Quisque erat ligula, auctor quis tincidunt sed, fermentum non nibh. Sed arcu odio, tincidunt vehicula feugiat lobortis, suscipit eget mi. Curabitur in molestie massa.
+                    <p>Maecenas porttitor augue et quam fringilla lacinia. Phasellus vel cursus nisl. Phasellus placerat convallis odio, vitae vehicula erat cursus vel. Sed et purus eget purus consectetur viverra non dapibus mi. Etiam pretium scelerisque nibh a venenatis. Sed in augue quam, ut tempor libero. In ornare est eget felis vestibulum dictum. Maecenas ante quam, semper nec porta id, ornare eu risus.</p>
+                </div>
             </div><!--END page template-->
 
             <!--content footer -->
