5 pages (+info.html)

--- a/contact_us.html
+++ b/contact_us.html
@@ -88,12 +88,10 @@
                 <!--left sidebar-->
                 <aside class="l-sidebarLt" itemscope itemtype='http://schema.org/WPSideBar'>
                     <!--phone block-->
-                    <div class="b-phone">
-                        <address itemprop='telephone'>
-                            <p>тел. (495) 345-67-89</p>
-                            <p>тел. (495) 345-67-89</p>
-                        </address>
-                    </div>
+                    <address class="b-phone" itemprop='telephone'>
+                        <p>тел. (495) 345-67-89</p>
+                        <p>тел. (495) 345-67-89</p>
+                    </address>
                     <!--callback block-->
                     <form class="b-callback">
                         <h2 class="title">Заказать обратный звонок:</h2>
@@ -112,22 +110,20 @@
                         <button type="submit">ок</button>
                     </form>
                     <!--skype block-->
-                    <div class="b-skype">
-                        <ul>
-                            <li class="item">
-                                <h2 class="title">jet-hotel</h2>
-                                <h3 class="person">Менеджер: Светлана</h3>
-                            </li>
-                            <li class="item">
-                                <h2 class="title">booking</h2>
-                                <h3 class="person">Менеджер: Андрей</h3>
-                            </li>
-                            <li class="item">
-                                <h2 class="title">hotels</h2>
-                                <h3 class="person">Менеджер: Юлия</h3>
-                            </li>
-                        </ul>
-                    </div>
+                    <ul class="b-skype">
+                        <li class="item">
+                            <h2 class="title">jet-hotel</h2>
+                            <h3 class="person">Менеджер: Светлана</h3>
+                        </li>
+                        <li class="item">
+                            <h2 class="title">booking</h2>
+                            <h3 class="person">Менеджер: Андрей</h3>
+                        </li>
+                        <li class="item">
+                            <h2 class="title">hotels</h2>
+                            <h3 class="person">Менеджер: Юлия</h3>
+                        </li>
+                    </ul>
                 </aside>
                 <!--right sidebar-->
                 <aside class="l-sidebarRt" itemscope itemtype='http://schema.org/WPSideBar'>
