--- a/booking.html
+++ b/booking.html
@@ -99,7 +99,274 @@
 <div class="l-tabsContainer">
 <!--START 1 tab-->
 <div class="l-tabsContainer__item">
-
+    <!--two star hotels-->
+    <div>
+        <header class="hotel_type">
+            <div class="b-rating">
+                <input type="hidden" name="val" value="2" itemprop='ratingValue'/>
+            </div>
+        </header>
+        <ul class="l-jList">
+        <!--one hotel-->
+        <li class="b-hotel" itemscope itemtype='http://schema.org/Hotel'>
+            <header>
+                <h1 class="name" itemprop='name'>Грин Парк Отель</h1>
+                <div class="b-rating" itemprop='aggregateRating' itemscope itemtype='http://schema.org/Rating'>
+                    <input type="hidden" name="val" value="2" itemprop='ratingValue'/>
+                </div>
+            </header>
+            <div class="mainInfo">
+                <img itemprop='photo' src="images/tmp/b-hotel__image.jpg" alt="hotel image">
+                <!--our choise-->
+                <span class="ourChoise">выбор</span>
+                <!--services list-->
+                <ul class="services">
+                    <li class="item item-1 ir">unknown service</li>
+                    <li class="item item-2 ir">Taxi</li>
+                    <li class="item item-3 ir">Drink</li>
+                    <li class="item item-4 ir">Parking</li>
+                    <li class="item item-5 ir">Safe</li>
+                    <li class="item item-6 ir">TV</li>
+                    <li class="item item-7 ir">Food</li>
+                </ul>
+                <div class="transfer">Марка позиционируется правильно?</div>
+            </div>
+            <div class="additionalInfo">
+                <!--<span class="price-old">2900 руб</span>-->
+                <!--<span class="discount">-50%</span>-->
+                <span class="price" itemprop='priceRange'>2900 руб</span>
+                <a href="#" class="moreInfo">подробнее →</a>
+            </div>
+        </li>
+        <!--one hotel-->
+        <li class="b-hotel" itemscope itemtype='http://schema.org/Hotel'>
+            <header>
+                <h1 class="name" itemprop='name'>Грин Парк Отель</h1>
+                <div class="b-rating" itemprop='aggregateRating' itemscope itemtype='http://schema.org/Rating'>
+                    <input type="hidden" name="val" value="2" itemprop='ratingValue'/>
+                </div>
+            </header>
+            <div class="mainInfo">
+                <img itemprop='photo' src="images/tmp/b-hotel__image.jpg" alt="hotel image">
+                <!--our choise-->
+                <span class="ourChoise">выбор</span>
+                <!--services list-->
+                <ul class="services">
+                    <li class="item item-1 ir">unknown service</li>
+                    <li class="item item-2 ir">Taxi</li>
+                    <li class="item item-3 ir">Drink</li>
+                    <li class="item item-4 ir">Parking</li>
+                    <li class="item item-5 ir">Safe</li>
+                    <li class="item item-6 ir">TV</li>
+                    <li class="item item-7 ir">Food</li>
+                </ul>
+                <div class="transfer">8 км от аэропорта Домодедово  стоимость трансфера  750 руб</div>
+            </div>
+            <div class="additionalInfo">
+                <span class="price-old">2900 руб</span>
+                <span class="discount">-50%</span>
+                <span class="price" itemprop='priceRange'>2900 руб</span>
+                <a href="#" class="moreInfo">подробнее →</a>
+            </div>
+        </li>
+        <!--one hotel-->
+        <li class="b-hotel" itemscope itemtype='http://schema.org/Hotel'>
+            <header>
+                <h1 class="name" itemprop='name'>Грин Парк Отель</h1>
+                <div class="b-rating" itemprop='aggregateRating' itemscope itemtype='http://schema.org/Rating'>
+                    <input type="hidden" name="val" value="2" itemprop='ratingValue'/>
+                </div>
+            </header>
+            <div class="mainInfo">
+                <img itemprop='photo' src="images/tmp/b-hotel__image.jpg" alt="hotel image">
+                <!--our choise-->
+                <span class="ourChoise">выбор</span>
+                <!--services list-->
+                <ul class="services">
+                    <li class="item item-1 ir">unknown service</li>
+                    <li class="item item-2 ir">Taxi</li>
+                    <li class="item item-3 ir">Drink</li>
+                    <li class="item item-4 ir">Parking</li>
+                    <li class="item item-5 ir">Safe</li>
+                    <li class="item item-6 ir">TV</li>
+                    <li class="item item-7 ir">Food</li>
+                </ul>
+                <div class="transfer">Марка позиционируется правильно?</div>
+            </div>
+            <div class="additionalInfo">
+                <!--<span class="price-old">2900 руб</span>-->
+                <!--<span class="discount">-50%</span>-->
+                <span class="price" itemprop='priceRange'>2900 руб</span>
+                <a href="#" class="moreInfo">подробнее →</a>
+            </div>
+        </li>
+        <!--one hotel-->
+        <li class="b-hotel" itemscope itemtype='http://schema.org/Hotel'>
+            <header>
+                <h1 class="name" itemprop='name'>Грин Парк Отель</h1>
+                <div class="b-rating" itemprop='aggregateRating' itemscope itemtype='http://schema.org/Rating'>
+                    <input type="hidden" name="val" value="2" itemprop='ratingValue'/>
+                </div>
+            </header>
+            <div class="mainInfo">
+                <img itemprop='photo' src="images/tmp/b-hotel__image.jpg" alt="hotel image">
+                <!--our choise-->
+                <span class="ourChoise">выбор</span>
+                <!--services list-->
+                <ul class="services">
+                    <li class="item item-1 ir">unknown service</li>
+                    <li class="item item-2 ir">Taxi</li>
+                    <li class="item item-3 ir">Drink</li>
+                    <li class="item item-4 ir">Parking</li>
+                    <li class="item item-5 ir">Safe</li>
+                    <li class="item item-6 ir">TV</li>
+                    <li class="item item-7 ir">Food</li>
+                </ul>
+                <div class="transfer">8 км от аэропорта Домодедово  стоимость трансфера  750 руб</div>
+            </div>
+            <div class="additionalInfo">
+                <span class="price-old">2900 руб</span>
+                <span class="discount">-50%</span>
+                <span class="price" itemprop='priceRange'>2900 руб</span>
+                <a href="#" class="moreInfo">подробнее →</a>
+            </div>
+        </li>
+    </ul>
+</div>
+    <!--3 stars hotels-->
+    <div>
+        <header class="hotel_type">
+            <div class="b-rating">
+                <input type="hidden" name="val" value="3" itemprop='ratingValue'/>
+            </div>
+        </header>
+        <ul class="l-jList">
+            <!--one hotel-->
+            <li class="b-hotel" itemscope itemtype='http://schema.org/Hotel'>
+                <header>
+                    <h1 class="name" itemprop='name'>Грин Парк Отель</h1>
+                    <div class="b-rating" itemprop='aggregateRating' itemscope itemtype='http://schema.org/Rating'>
+                        <input type="hidden" name="val" value="3" itemprop='ratingValue'/>
+                    </div>
+                </header>
+                <div class="mainInfo">
+                    <img itemprop='photo' src="images/tmp/b-hotel__image.jpg" alt="hotel image">
+                    <!--our choise-->
+                    <span class="ourChoise">выбор</span>
+                    <!--services list-->
+                    <ul class="services">
+                        <li class="item item-1 ir">unknown service</li>
+                        <li class="item item-2 ir">Taxi</li>
+                        <li class="item item-3 ir">Drink</li>
+                        <li class="item item-4 ir">Parking</li>
+                        <li class="item item-5 ir">Safe</li>
+                        <li class="item item-6 ir">TV</li>
+                        <li class="item item-7 ir">Food</li>
+                    </ul>
+                    <div class="transfer">Марка позиционируется правильно?</div>
+                </div>
+                <div class="additionalInfo">
+                    <!--<span class="price-old">2900 руб</span>-->
+                    <!--<span class="discount">-50%</span>-->
+                    <span class="price" itemprop='priceRange'>2900 руб</span>
+                    <a href="#" class="moreInfo">подробнее →</a>
+                </div>
+            </li>
+            <!--one hotel-->
+            <li class="b-hotel" itemscope itemtype='http://schema.org/Hotel'>
+                <header>
+                    <h1 class="name" itemprop='name'>Грин Парк Отель</h1>
+                    <div class="b-rating" itemprop='aggregateRating' itemscope itemtype='http://schema.org/Rating'>
+                        <input type="hidden" name="val" value="3" itemprop='ratingValue'/>
+                    </div>
+                </header>
+                <div class="mainInfo">
+                    <img itemprop='photo' src="images/tmp/b-hotel__image.jpg" alt="hotel image">
+                    <!--our choise-->
+                    <span class="ourChoise">выбор</span>
+                    <!--services list-->
+                    <ul class="services">
+                        <li class="item item-1 ir">unknown service</li>
+                        <li class="item item-2 ir">Taxi</li>
+                        <li class="item item-3 ir">Drink</li>
+                        <li class="item item-4 ir">Parking</li>
+                        <li class="item item-5 ir">Safe</li>
+                        <li class="item item-6 ir">TV</li>
+                        <li class="item item-7 ir">Food</li>
+                    </ul>
+                    <div class="transfer">8 км от аэропорта Домодедово  стоимость трансфера  750 руб</div>
+                </div>
+                <div class="additionalInfo">
+                    <span class="price-old">2900 руб</span>
+                    <span class="discount">-50%</span>
+                    <span class="price" itemprop='priceRange'>2900 руб</span>
+                    <a href="#" class="moreInfo">подробнее →</a>
+                </div>
+            </li>
+            <!--one hotel-->
+            <li class="b-hotel" itemscope itemtype='http://schema.org/Hotel'>
+                <header>
+                    <h1 class="name" itemprop='name'>Грин Парк Отель</h1>
+                    <div class="b-rating" itemprop='aggregateRating' itemscope itemtype='http://schema.org/Rating'>
+                        <input type="hidden" name="val" value="3" itemprop='ratingValue'/>
+                    </div>
+                </header>
+                <div class="mainInfo">
+                    <img itemprop='photo' src="images/tmp/b-hotel__image.jpg" alt="hotel image">
+                    <!--our choise-->
+                    <span class="ourChoise">выбор</span>
+                    <!--services list-->
+                    <ul class="services">
+                        <li class="item item-1 ir">unknown service</li>
+                        <li class="item item-2 ir">Taxi</li>
+                        <li class="item item-3 ir">Drink</li>
+                        <li class="item item-4 ir">Parking</li>
+                        <li class="item item-5 ir">Safe</li>
+                        <li class="item item-6 ir">TV</li>
+                        <li class="item item-7 ir">Food</li>
+                    </ul>
+                    <div class="transfer">Марка позиционируется правильно?</div>
+                </div>
+                <div class="additionalInfo">
+                    <!--<span class="price-old">2900 руб</span>-->
+                    <!--<span class="discount">-50%</span>-->
+                    <span class="price" itemprop='priceRange'>2900 руб</span>
+                    <a href="#" class="moreInfo">подробнее →</a>
+                </div>
+            </li>
+            <!--one hotel-->
+            <li class="b-hotel" itemscope itemtype='http://schema.org/Hotel'>
+                <header>
+                    <h1 class="name" itemprop='name'>Грин Парк Отель</h1>
+                    <div class="b-rating" itemprop='aggregateRating' itemscope itemtype='http://schema.org/Rating'>
+                        <input type="hidden" name="val" value="3" itemprop='ratingValue'/>
+                    </div>
+                </header>
+                <div class="mainInfo">
+                    <img itemprop='photo' src="images/tmp/b-hotel__image.jpg" alt="hotel image">
+                    <!--our choise-->
+                    <span class="ourChoise">выбор</span>
+                    <!--services list-->
+                    <ul class="services">
+                        <li class="item item-1 ir">unknown service</li>
+                        <li class="item item-2 ir">Taxi</li>
+                        <li class="item item-3 ir">Drink</li>
+                        <li class="item item-4 ir">Parking</li>
+                        <li class="item item-5 ir">Safe</li>
+                        <li class="item item-6 ir">TV</li>
+                        <li class="item item-7 ir">Food</li>
+                    </ul>
+                    <div class="transfer">8 км от аэропорта Домодедово  стоимость трансфера  750 руб</div>
+                </div>
+                <div class="additionalInfo">
+                    <span class="price-old">2900 руб</span>
+                    <span class="discount">-50%</span>
+                    <span class="price" itemprop='priceRange'>2900 руб</span>
+                    <a href="#" class="moreInfo">подробнее →</a>
+                </div>
+            </li>
+        </ul>
+    </div>
 </div><!--END 1 tab-->
 <!--START 2 tab-->
 <div class="l-tabsContainer__item"></div><!--END 2 tab-->
@@ -136,7 +403,7 @@
 </div><!-- END WRAPPER -->
 
 <!-- FOOTER -->
-<footer class="l-pageFooter" itemscope itemtype='http://schema.org/WPFooter'>
+<footer class="l-pageFootder" itemscope itemtype='http://schema.org/WPFooter'>
     <div>
         <!--copy-->
         <small class="b-copyright">All Rights Reserved, © 2012</small>
@@ -151,6 +418,7 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.2.min.js"><\/script>')</script>
 <script src="js/vendor/jquery.columnizer.min.js"></script>
+<script src="js/plugins/jquery.rating-2.0.min.js"></script>
 <script src="js/main.js"></script>
 
 <!-- Asynchronous Google Analytics snippet. Change UA-XXXXX-X to be your site's ID.
