--- a/booking.html
+++ b/booking.html
@@ -367,6 +367,16 @@
             </li>
         </ul>
     </div>
+    <!--seo text-->
+    <div class="defaultCss ">
+        <header class="page-booking__seoText__title">Бронирование отелей в домодедово</header>
+        <div class="l-columnize_2 defaultCss m-color_939393">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras nulla lorem, consequat a imperdiet eu, adipiscing sit amet nulla. Mauris nisi lacus, convallis nec auctor vel, laoreet pharetra nisl. Proin mattis erat quam. Vestibulum scelerisque iaculis commodo. Aenean ut mauris mi. Vestibulum pellentesque porta viverra. Quisque erat ligula, auctor quis tincidunt sed, fermentum non nibh. Sed arcu odio, tincidunt vehicula feugiat lobortis, suscipit eget mi. Curabitur in molestie massa.
+        <p>Maecenas porttitor augue et quam fringilla lacinia. Phasellus vel cursus nisl. Phasellus placerat convallis odio, vitae vehicula erat cursus vel. Sed et purus eget purus consectetur viverra non dapibus mi. Etiam pretium scelerisque nibh a venenatis. Sed in augue quam, ut tempor libero. In ornare est eget felis vestibulum dictum. Maecenas ante quam, semper nec porta id, ornare eu risus.
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras nulla lorem, consequat a imperdiet eu, adipiscing sit amet nulla. Mauris nisi lacus, convallis nec auctor vel, laoreet pharetra nisl. Proin mattis erat quam. Vestibulum scelerisque iaculis commodo. Aenean ut mauris mi. Vestibulum pellentesque porta viverra. Quisque erat ligula, auctor quis tincidunt sed, fermentum non nibh. Sed arcu odio, tincidunt vehicula feugiat lobortis, suscipit eget mi. Curabitur in molestie massa.
+        <p>Maecenas porttitor augue et quam fringilla lacinia. Phasellus vel cursus nisl. Phasellus placerat convallis odio, vitae vehicula erat cursus vel. Sed et purus eget purus consectetur viverra non dapibus mi. Etiam pretium scelerisque nibh a venenatis. Sed in augue quam, ut tempor libero. In ornare est eget felis vestibulum dictum. Maecenas ante quam, semper nec porta id, ornare eu risus.</p>
+        </div>
+    </div>
 </div><!--END 1 tab-->
 <!--START 2 tab-->
 <div class="l-tabsContainer__item"></div><!--END 2 tab-->
