--- a/booking_payment.html
+++ b/booking_payment.html
@@ -88,7 +88,7 @@
     <header>
         <h1 class="name">Грин Парк Отель</h1>
         <div class="b-rating">
-            <input type="hidden" name="val" value="2" itemprop='ratingValue'/>
+            <input type="hidden" name="val" value="2"/>
         </div>
     </header>
     <div class="l-jList">
@@ -202,7 +202,7 @@
 </div><!-- END WRAPPER -->
 
 <!-- FOOTER -->
-<footer class="l-pageFootder" itemscope itemtype='http://schema.org/WPFooter'>
+<footer class="l-pageFooter" itemscope itemtype='http://schema.org/WPFooter'>
     <div>
         <!--copy-->
         <small class="b-copyright">All Rights Reserved, © 2012</small>
@@ -216,6 +216,7 @@
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.2.min.js"><\/script>')</script>
+<script src="js/plugins/jquery-ui-1.9.0.custom.min.js"></script>
 <script src="js/vendor/jquery.columnizer.min.js"></script>
 <script src="js/plugins/jquery.rating-2.0.min.js"></script>
 <script src="js/main.js"></script>
