--- a/contact_us.html
+++ b/contact_us.html
@@ -86,7 +86,7 @@
             <!--START page template-->
             <div class="page page-contactUs" itemscope itemtype='http://schema.org/LodgingBusiness'>
                 <!--left sidebar-->
-                <aside class="l-sidebarLt" itemscope itemtype='http://schema.org/WPSideBar'>
+                <aside class="l-sidebarLt">
                     <!--phone block-->
                     <address class="b-phone" itemprop='telephone'>
                         <p>тел. (495) 345-67-89</p>
@@ -183,7 +183,9 @@
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.2.min.js"><\/script>')</script>
+<script src="js/plugins/jquery-ui-1.9.0.custom.min.js"></script>
 <script src="js/vendor/jquery.columnizer.min.js"></script>
+<script src="js/plugins/jquery.rating-2.0.min.js"></script>
 <script src="js/main.js"></script>
 
 <!-- Asynchronous Google Analytics snippet. Change UA-XXXXX-X to be your site's ID.
