--- a/hotels_map.html
+++ b/hotels_map.html
@@ -125,7 +125,7 @@
                             <div class="content">
                                 <span class="price">от 1430 руб</span>
                                 <div class="b-rating_small">
-                                    <input type="hidden" name="val" value="2" itemprop='ratingValue'/>
+                                    <input type="hidden" name="val" value="2"/>
                                 </div>
                                 <a href="#" class="button">Забронируй<span> со скидкой  сейчас!</span></a>
                             </div>
@@ -188,9 +188,9 @@
 </footer>
 <!-- END FOOTER -->
 
-
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.2.min.js"><\/script>')</script>
+<script src="js/plugins/jquery-ui-1.9.0.custom.min.js"></script>
 <script src="js/vendor/jquery.columnizer.min.js"></script>
 <script src="js/plugins/jquery.rating-2.0.min.js"></script>
 <script src="js/main.js"></script>
