--- a/info.html
+++ b/info.html
@@ -359,7 +359,7 @@
                             <div class="l-jList">
                                 <!--restaraunts-->
                                 <ul class="restaraunts">
-                                    <header class="title">Рестораны и кафе поблизости</header>
+                                    <li class="title">Рестораны и кафе поблизости</li>
                                     <!--one restraunt-->
                                     <li class="item" itemscope itemtype='http://schema.org/Restaurant'>
                                         <header class="item__name" itemprop='name'>«Баттерфляй»</header>
@@ -371,7 +371,7 @@
                                             <dt>Средний чек (банкет):</dt>
                                             <dd  itemprop='priceRange'>150,00 - 200,00 грн, 200,00 - 250,00 грн</dd>
                                         </dl>
-                                        <address itemprop='location' itemscope itemprop='http://schema.org/Place'>
+                                        <address itemprop='address' itemscope itemtype='http://schema.org/PostalAddress'>
                                             г. Домодедово, ул. Гагарина, д. 52/9
                                             <a href="#" class="mapLink" itemprop='map'>на карте</a>
                                         </address>
@@ -387,7 +387,7 @@
                                             <dt>Средний чек (банкет):</dt>
                                             <dd  itemprop='priceRange'>150,00 - 200,00 грн, 200,00 - 250,00 грн</dd>
                                         </dl>
-                                        <address itemprop='location' itemscope itemprop='http://schema.org/Place'>
+                                        <address itemprop='address' itemscope itemtype='http://schema.org/PostalAddress'>
                                             г. Домодедово, ул. Гагарина, д. 52/9
                                             <a href="#" class="mapLink" itemprop='map'>на карте</a>
                                         </address>
@@ -404,7 +404,7 @@
                                                 <dt>Торговый центр.</dt>
                                                 <dd>Товары для детей, детские игрушки. Косметика, парфюмерия.</dd>
                                             </dl>
-                                            <address itemprop='location' itemscope itemprop='http://schema.org/Place'>
+                                            <address itemprop='address' itemscope itemtype='http://schema.org/PostalAddress'>
                                                 г. Домодедово, ул. Гагарина, д. 52/9
                                                 <a href="#" class="mapLink" itemprop='map'>на карте</a>
                                             </address>
@@ -416,7 +416,7 @@
                                                 <dt>Сетевой продуктовый магазин.</dt>
                                                 <dd>Товары для детей, детские игрушки. Косметика, парфюмерия.</dd>
                                             </dl>
-                                            <address itemprop='location' itemscope itemprop='http://schema.org/Place'>
+                                            <address itemprop='address' itemscope itemtype='http://schema.org/PostalAddress'>
                                                 г. Домодедово, ул. Краснодарская, д. 2
                                                 <span itemprop='telephone'>тел (495) 234-56-78</span>
                                                 <a href="#" class="mapLink" itemprop='map'>на карте</a>
@@ -476,7 +476,9 @@
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.2.min.js"><\/script>')</script>
+<script src="js/plugins/jquery-ui-1.9.0.custom.min.js"></script>
 <script src="js/vendor/jquery.columnizer.min.js"></script>
+<script src="js/plugins/jquery.rating-2.0.min.js"></script>
 <script src="js/main.js"></script>
 
 <!-- Asynchronous Google Analytics snippet. Change UA-XXXXX-X to be your site's ID.
