--- a/booking.html
+++ b/booking.html
@@ -103,7 +103,7 @@
     <div>
         <header class="hotel_type">
             <div class="b-rating">
-                <input type="hidden" name="val" value="2" itemprop='ratingValue'/>
+                <input type="hidden" name="val" value="2"/>
             </div>
         </header>
         <ul class="l-jList">
@@ -111,9 +111,9 @@
         <li class="b-hotel" itemscope itemtype='http://schema.org/Hotel'>
             <header>
                 <h1 class="name" itemprop='name'>Грин Парк Отель</h1>
-                <div class="b-rating" itemprop='aggregateRating' itemscope itemtype='http://schema.org/Rating'>
-                    <input type="hidden" name="val" value="2" itemprop='ratingValue'/>
-                </div>
+                <<div class="b-rating">
+                <input type="hidden" name="val" value="2"/>
+            </div>
             </header>
             <div class="mainInfo">
                 <img itemprop='photo' src="images/tmp/b-hotel__image.jpg" alt="hotel image">
@@ -142,8 +142,8 @@
         <li class="b-hotel" itemscope itemtype='http://schema.org/Hotel'>
             <header>
                 <h1 class="name" itemprop='name'>Грин Парк Отель</h1>
-                <div class="b-rating" itemprop='aggregateRating' itemscope itemtype='http://schema.org/Rating'>
-                    <input type="hidden" name="val" value="2" itemprop='ratingValue'/>
+                <div class="b-rating">
+                    <input type="hidden" name="val" value="2"/>
                 </div>
             </header>
             <div class="mainInfo">
@@ -173,8 +173,8 @@
         <li class="b-hotel" itemscope itemtype='http://schema.org/Hotel'>
             <header>
                 <h1 class="name" itemprop='name'>Грин Парк Отель</h1>
-                <div class="b-rating" itemprop='aggregateRating' itemscope itemtype='http://schema.org/Rating'>
-                    <input type="hidden" name="val" value="2" itemprop='ratingValue'/>
+                <div class="b-rating">
+                    <input type="hidden" name="val" value="2"/>
                 </div>
             </header>
             <div class="mainInfo">
@@ -204,8 +204,8 @@
         <li class="b-hotel" itemscope itemtype='http://schema.org/Hotel'>
             <header>
                 <h1 class="name" itemprop='name'>Грин Парк Отель</h1>
-                <div class="b-rating" itemprop='aggregateRating' itemscope itemtype='http://schema.org/Rating'>
-                    <input type="hidden" name="val" value="2" itemprop='ratingValue'/>
+                <div class="b-rating">
+                    <input type="hidden" name="val" value="2"/>
                 </div>
             </header>
             <div class="mainInfo">
@@ -237,7 +237,7 @@
     <div>
         <header class="hotel_type">
             <div class="b-rating">
-                <input type="hidden" name="val" value="3" itemprop='ratingValue'/>
+                <input type="hidden" name="val" value="3"/>
             </div>
         </header>
         <ul class="l-jList">
@@ -245,8 +245,8 @@
             <li class="b-hotel" itemscope itemtype='http://schema.org/Hotel'>
                 <header>
                     <h1 class="name" itemprop='name'>Грин Парк Отель</h1>
-                    <div class="b-rating" itemprop='aggregateRating' itemscope itemtype='http://schema.org/Rating'>
-                        <input type="hidden" name="val" value="3" itemprop='ratingValue'/>
+                    <div class="b-rating">
+                        <input type="hidden" name="val" value="3"/>
                     </div>
                 </header>
                 <div class="mainInfo">
@@ -276,8 +276,8 @@
             <li class="b-hotel" itemscope itemtype='http://schema.org/Hotel'>
                 <header>
                     <h1 class="name" itemprop='name'>Грин Парк Отель</h1>
-                    <div class="b-rating" itemprop='aggregateRating' itemscope itemtype='http://schema.org/Rating'>
-                        <input type="hidden" name="val" value="3" itemprop='ratingValue'/>
+                    <div class="b-rating">
+                        <input type="hidden" name="val" value="3"/>
                     </div>
                 </header>
                 <div class="mainInfo">
@@ -307,8 +307,8 @@
             <li class="b-hotel" itemscope itemtype='http://schema.org/Hotel'>
                 <header>
                     <h1 class="name" itemprop='name'>Грин Парк Отель</h1>
-                    <div class="b-rating" itemprop='aggregateRating' itemscope itemtype='http://schema.org/Rating'>
-                        <input type="hidden" name="val" value="3" itemprop='ratingValue'/>
+                    <div class="b-rating">
+                        <input type="hidden" name="val" value="3"/>
                     </div>
                 </header>
                 <div class="mainInfo">
@@ -338,8 +338,8 @@
             <li class="b-hotel" itemscope itemtype='http://schema.org/Hotel'>
                 <header>
                     <h1 class="name" itemprop='name'>Грин Парк Отель</h1>
-                    <div class="b-rating" itemprop='aggregateRating' itemscope itemtype='http://schema.org/Rating'>
-                        <input type="hidden" name="val" value="3" itemprop='ratingValue'/>
+                    <div class="b-rating">
+                        <input type="hidden" name="val" value="3"/>
                     </div>
                 </header>
                 <div class="mainInfo">
@@ -413,7 +413,7 @@
 </div><!-- END WRAPPER -->
 
 <!-- FOOTER -->
-<footer class="l-pageFootder" itemscope itemtype='http://schema.org/WPFooter'>
+<footer class="l-pageFooter" itemscope itemtype='http://schema.org/WPFooter'>
     <div>
         <!--copy-->
         <small class="b-copyright">All Rights Reserved, © 2012</small>
@@ -427,6 +427,7 @@
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.2.min.js"><\/script>')</script>
+<script src="js/plugins/jquery-ui-1.9.0.custom.min.js"></script>
 <script src="js/vendor/jquery.columnizer.min.js"></script>
 <script src="js/plugins/jquery.rating-2.0.min.js"></script>
 <script src="js/main.js"></script>
