--- a/index.html
+++ b/index.html
@@ -109,11 +109,6 @@
                 <div class="l-tabsContainer__item">
                     <!--two star hotels-->
                     <div>
-                        <header class="hotel_type">
-                            <div class="b-rating">
-                                <input type="hidden" name="val" value="2" itemprop='ratingValue'/>
-                            </div>
-                        </header>
                         <ul class="l-jList">
                             <!--one hotel-->
                             <li class="b-hotel" itemscope itemtype='http://schema.org/Hotel'>
@@ -348,7 +343,9 @@
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.2.min.js"><\/script>')</script>
+<script src="js/plugins/jquery-ui-1.9.0.custom.min.js"></script>
 <script src="js/vendor/jquery.columnizer.min.js"></script>
+<script src="js/plugins/jquery.rating-2.0.min.js"></script>
 <script src="js/main.js"></script>
 
 <!-- Asynchronous Google Analytics snippet. Change UA-XXXXX-X to be your site's ID.
