--- a/serv_nav.html
+++ b/serv_nav.html
@@ -9,16 +9,16 @@
     <header style="font-size: 24px; padding-bottom: 10px;">Служебная страница с навигацией: зажмите ctrl чтобы вкладки открывались в новом окне</header>
     <ul style="font-size: 18px;">
         <li><a href="index.html">Главная</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="production.html">Продукция</a></li>
-        <li><a href="category.html">Продукция: категория</a></li>
-        <li><a href="sub-category.html">Продукция: подкатегория</a></li>
-        <li><a href="product.html">Продукция: товар</a></li>
-        <li><a href="contacts.html">Контакты</a></li>
-        <li><a href="delivery.html">Доставка</a></li>
-        <li><a href="news.html">Новости</a></li>
-        <li><a href="vacancies.html">Вакансии</a></li>
-        <li><a href="404.html">404 Ошибка</a></li>
+        <li><a href="about_us.html">About Us</a></li>
+        <li><a href="benefits_list.html">benefits_list</a></li>
+        <li><a href="booking.html">booking</a></li>
+        <li><a href="booking_payment.html">booking_payment</a></li>
+        <li><a href="contact_us.html">contact_us</a></li>
+        <li><a href="hotel_info.html">hotel_info</a></li>
+        <li><a href="hotels_map.html">hotels_map</a></li>
+        <li><a href="info.html">info</a></li>
+        <li><a href="lucky.html">lucky</a></li>
+        <li><a href="transfer.html">transfer</a></li>
     </ul>
 </nav>
 </body>
