--- a/booking.html
+++ b/booking.html
@@ -286,12 +286,11 @@
                     <span class="ourChoise">выбор</span>
                     <!--services list-->
                     <ul class="services">
-                        <li class="item item-1 ir">unknown service</li>
+                        <li class="item item-1 ir disabled">unknown service</li>
                         <li class="item item-2 ir">Taxi</li>
                         <li class="item item-3 ir">Drink</li>
-                        <li class="item item-4 ir">Parking</li>
-                        <li class="item item-5 ir">Safe</li>
-                        <li class="item item-6 ir">TV</li>
+                        <li class="item item-4 ir disabled">Parking</li>
+                        <li class="item item-6 ir ">TV</li>
                         <li class="item item-7 ir">Food</li>
                     </ul>
                     <div class="transfer">8 км от аэропорта Домодедово  стоимость трансфера  750 руб</div>
@@ -319,11 +318,11 @@
                     <ul class="services">
                         <li class="item item-1 ir">unknown service</li>
                         <li class="item item-2 ir">Taxi</li>
-                        <li class="item item-3 ir">Drink</li>
+                        <li class="item item-3 ir disabled">Drink</li>
                         <li class="item item-4 ir">Parking</li>
                         <li class="item item-5 ir">Safe</li>
                         <li class="item item-6 ir">TV</li>
-                        <li class="item item-7 ir">Food</li>
+                        <li class="item item-7 ir disabled">Food</li>
                     </ul>
                     <div class="transfer">Марка позиционируется правильно?</div>
                 </div>
